--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="http://otrad-primat.tk/#home" class="active scrollto"><i class="fas fa-home"></i><i>HOME</i></a></li>
 			<li><a href="http://otrad-primat.tk/#community" class="scrollto"><i class="fas fa-comments"></i><i>COMMUNITY</i></a></li>
-			<li><a href="index.html#admin" class="scrollto"><i class="fas fa-user-shield"></i><i>OUR ADMINISTRATION</i></a></li>
+			<li><a href="http://otrad-primat.tk#admin" class="scrollto"><i class="fas fa-user-shield"></i><i>OUR ADMINISTRATION</i></a></li>
 			<li><a href="contact.html"><i class="fas fa-id-card" class="scrollto"></i><i>CONTACTS</i></a></li>
 			<li><a href="https://discord.com/api/downloads/distributions/app/installers/latest?channel=stable&platform=win&arch=x86"><i class="fas fa-download" class="scrollto"></i><i>DOWNLOAD DISCORD</i></a></li>
 		</ul>
