--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
   		});
 	});
 	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-QEBBYCYLXG');
+	</script>
 </head>
 <body>
 	<div class="side closed">
