--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   		});
 	});
 	</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QEBBYCYLXG"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
   		function gtag(){dataLayer.push(arguments);}
